--- a/#src/pug/layout/header.pug
+++ b/#src/pug/layout/header.pug
@@ -16,15 +16,15 @@
 			._items
 				._item-btn._hello._active
 					+iconfont('hand-shake')
-					+btn-link('button','_hello', 'header-content__link')
+					+btn-link('button','_hello', 'menu-top__link')
 					//- +iconfont('angles-down-solid')
 				._item-btn._scills
 					+iconfont('books-library')
-					+btn-link('button','_scills', 'header-content__link') 
+					+btn-link('button','_scills', 'menu-top__link') 
 				._item-btn._project 
 					+svg('folder-directory', 'menu-top__svg-img')
 					+svg('folder-open-directory', 'menu-top__svg-img')
-					+btn-link('.button','_project', 'header-content__link') 
+					+btn-link('.button','_project', 'menu-top__link') 
 		._menu-column 
 			._item-btn
 				+btn-link('.button','contact me _', 'header-content__link') 
