--- a/#src/pug/pages/index.pug
+++ b/#src/pug/pages/index.pug
@@ -24,3 +24,7 @@ block editor
 			include ../partials/section-terminal
 block footer 
 	include ../layout/footer
+block modal 
+	.modal 
+		span &times;
+		img(src="#" id="image")._image
