--- a/#src/pug/partials/section-hello.pug
+++ b/#src/pug/partials/section-hello.pug
@@ -36,7 +36,8 @@
 					span &nbsp;githubLink
 					span &nbsp;&#61;&nbsp;
 					+link('https://github.com/Dennchik', 'https://github.com/example/url')(target="_blank" data-type="link")
-	._column
-		.mainslide._row
-			include ./swiper
-
+	._column 
+		._row 
+			._pagination-number
+	._column 
+		include ./swiper
