--- a/#src/pug/partials/swiper.pug
+++ b/#src/pug/partials/swiper.pug
@@ -1,49 +1,34 @@
-.mainslide__body._swiper
-  .mainslide__slide
-    .content-mainslide.mainslide__content
-      ._image
-        img(src="@@webRoot/img/main/code-snippet-2.png" alt="")
-  .mainslide__slide
-    .content-mainslide.mainslide__content
-      ._image
-        img(src="@@webRoot/img/main/code-snippet-2.png" alt="")
-  .mainslide__slide 
-    .content-mainslide.mainslide__content
-      ._image
-        img(src="@@webRoot/img/main/code-snippet-2.png" alt="")
-  .mainslide__slide
-    .content-mainslide.mainslide__content
-      ._image
-        img(src="@@webRoot/img/main/code-snippet-2.png" alt="")     
-  .mainslide__slide
-    .content-mainslide.mainslide__content 
-      ._image
-        img(src="@@webRoot/img/main/code-snippet-2.png" alt="")
-  .mainslide__slide 
-    .content-mainslide.mainslide__content
-      ._image
-        img(src="@@webRoot/img/main/code-snippet-2.png" alt="")
-  .mainslide__slide
-    .content-mainslide.mainslide__content
-      ._image
-        img(src="@@webRoot/img/main/code-snippet-2.png" alt="")
-  .mainslide__slide 
-    .content-mainslide.mainslide__content
-      ._image
-        img(src="@@webRoot/img/main/code-snippet-2.png" alt="")
-  .mainslide__slide
-    .content-mainslide.mainslide__content
-      ._image
-        img(src="@@webRoot/img/main/code-snippet-2.png" alt="")     
-  .mainslide__slide 
-    .content-mainslide.mainslide__content
-      ._image
-        img(src="@@webRoot/img/main/code-snippet-2.png" alt="")
-  .mainslide__slide 
-    .content-mainslide.mainslide__content
-      ._image
-        img(src="@@webRoot/img/main/code-snippet-2.png" alt="")        
-.swiper-pagination 
-.swiper-button-prev
-.swiper-button-next
-.swiper-scrollbar
+.mainslide.hello-page__row
+  ._body._swiper 
+    ._slide
+      .content-mainslide._content
+        ._image
+          img(src="@@webRoot/img/main/screen-4.png" alt="image") 
+    ._slide
+      .content-mainslide._content
+        ._image
+          img(src="@@webRoot/img/main/screen-3.png" alt="image")  
+    ._slide
+      .content-mainslide._content 
+        ._image
+          img(src="@@webRoot/img/main/screen-2.png" alt="image") 
+    ._slide 
+      .content-mainslide._content
+        ._image
+          img(src="@@webRoot/img/main/screen-1.png" alt="image") 
+    ._slide 
+      .content-mainslide._content
+        ._image
+          img(src="@@webRoot/img/main/screen-4.png" alt="image") 
+    ._slide
+      .content-mainslide._content
+        ._image
+          img(src="@@webRoot/img/main/screen-3.png" alt="image") 
+    ._slide
+      .content-mainslide._content
+        ._image
+          img(src="@@webRoot/img/main/screen-2.png" alt="image") 
+    ._slide
+      .content-mainslide._content
+        ._image
+          img(src="@@webRoot/img/main/screen-1.png" alt="image")  
