--- a/#src/scss/core/_variables.scss
+++ b/#src/scss/core/_variables.scss
@@ -39,6 +39,7 @@ $blue-light-not-active: #8bb0ff6c;
 //* ---------------------------- [Other colors] --------------------------------
 
 $blue-light: #7796f3;
+// $blue-light: #46bedd;
 $second-color: #002f5a;
 $colorSideText: #9bceb4;
 $yellow: #ecc673ee;
