--- a/#src/pug/layout/app_layout.pug
+++ b/#src/pug/layout/app_layout.pug
@@ -7,12 +7,11 @@ html(lang="ru")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 		meta(name="description" content="Краткое описание документа")
 		meta(name="keywords" content="keywords-ключевые слова для поиска")
-		link(rel="icon" type="image/icon" href="@@webRoot/img/icons/xfire.ico")
-		link(rel="stylesheet" type="text/css" href="@@webRoot/css/style.min.css" ) 
-
-		script(defer="defer" type="text/javascript" src="@@webRoot/js/main.min.js")
-
-
+		block link
+			link(rel="icon" type="image/icon" href="@@webRoot/img/icons/xfire.ico")
+			link(rel="stylesheet" type="text/css" href="@@webRoot/css/style.min.css" ) 
+		block script
+			script(defer="defer" type="text/javascript" src="@@webRoot/js/main.min.js")
 		block title
 		- var text
 			title #{text}
@@ -34,7 +33,8 @@ html(lang="ru")
 										block editor
 							footer._footer
 								block footer 
-								
+				block modal
+
 
 
 
