--- a/#src/scss/section/section-swiper.scss
+++ b/#src/scss/section/section-swiper.scss
@@ -3,14 +3,13 @@
 	&__body {
 		position: relative;
 		height: 0;
-		min-height: 150%;
+		min-height: 130%;
 		display: flex;
 		justify-content: center;
 	}
 
 	// .mainslide__slide
 	&__slide {
-		cursor: pointer;
 		opacity: 0.5;
 		display: inline-flex;
 		flex-wrap: wrap;
@@ -19,6 +18,7 @@
 		align-self: center;
 
 		&.swiper-slide-active {
+			cursor: pointer;
 			opacity: 1;
 		}
 	}
@@ -33,19 +33,91 @@
 .content-mainslide {
 	// .content-mainslide__image
 	&__image {
+		border: 1px solid $border-color;
+		height: 100px;
+		overflow: hidden;
+		border-radius: 10px;
+		box-shadow: 0 1px 10px #000;
 		img {
-			display: block;
+			position: relative;
 			width: 100%;
-			height: 100%;
+			height: auto;
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			position: relative;
 			object-fit: cover;
 		}
 	}
 }
-.swiper-pagination {
+
+.modal {
+	display: none;
+	position: absolute;
+	z-index: 9;
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.9);
+	opacity: 0;
+	transition: all 0.9s ease 0s;
+
+	&__image {
+		border: 1px solid red;
+		-webkit-animation-name: zoom;
+		-webkit-animation-duration: 0.6s;
+		animation-name: zoom;
+		animation-duration: 0.6s;
+		margin: auto;
+		display: block;
+		width: 80%;
+		max-width: 700px;
+	}
+
+	&._show {
+		position: fixed;
+		display: block;
+		overflow: auto;
+		left: 0;
+		top: 0;
+		opacity: 1;
+	}
+
+	span {
+		// position: absolute;
+		top: 15px;
+		right: 35px;
+		color: #f1f1f1;
+		font-size: 40px;
+		font-weight: bold;
+		transition: 0.3s;
+		&:hover,
+		&:focus {
+			color: #bbb;
+			text-decoration: none;
+			cursor: pointer;
+		}
+	}
 }
-.swiper-button-prev {
+@-webkit-keyframes zoom {
+	from {
+		-webkit-transform: scale(0);
+	}
+
+	to {
+		-webkit-transform: scale(1);
+	}
 }
-.swiper-button-next {
-}
-.swiper-scrollbar {
+
+@keyframes zoom {
+	from {
+		transform: scale(0);
+	}
+
+	to {
+		transform: scale(1);
+	}
 }
