--- a/#src/pug/partials/swiper.pug
+++ b/#src/pug/partials/swiper.pug
@@ -31,4 +31,8 @@
     ._slide
       .content-mainslide._content
         ._image
-          img(src="@@webRoot/img/main/screen-1.png" alt="image")  
+          img(src="@@webRoot/img/main/screen-1.png" alt="image") 
+    ._slide
+      .content-mainslide._content
+        ._image
+          img(src="@@webRoot/img/main/screen-4.png" alt="image") 
