--- a/#src/scss/section/section-hello.scss
+++ b/#src/scss/section/section-hello.scss
@@ -56,7 +56,7 @@
 
 	//.hello-page__row
 	&__row {
-		overflow: hidden;
+		// overflow-y: hidden;
 		position: relative;
 		width: 100%;
 		height: 100%;
@@ -93,11 +93,25 @@
 		font-weight: 100;
 
 		.swiper-pagination-bullet-active {
+			transition: all 0.9s ease 0s;
+			position: relative;
 			color: $blue-light;
 			text-shadow: $orange 1px 0 10px;
 			display: flex;
 			align-items: center;
 			font-weight: 500;
+			&::after {
+				content: '';
+				position: absolute;
+				transform: translate(-30%, 0);
+				width: 20px;
+				height: 20px;
+				border-radius: 50%;
+				background: #00ffff1e;
+				box-shadow: $boxShadow;
+			}
+
+			// @include flex-justify-center;s
 		}
 		.swiper-pagination-bullet {
 			cursor: pointer;
