--- a/#src/pug/partials/section-hello.pug
+++ b/#src/pug/partials/section-hello.pug
@@ -36,8 +36,8 @@
 					span &nbsp;githubLink
 					span &nbsp;&#61;&nbsp;
 					+link('https://github.com/Dennchik', 'https://github.com/example/url')(target="_blank" data-type="link")
-	._column 
+	._column(data-move-el="[{'bp-max': 690, 'index': 1, 'target': '.bp-2'}]") 
 		._row 
-			._pagination-number
-	._column 
+			._pagination-number 
+	._column(data-move-el="[{'bp-max': 690, 'index': 1, 'target': '.bp-1'}]")
 		include ./swiper
