--- a/#src/pug/partials/section-terminal.pug
+++ b/#src/pug/partials/section-terminal.pug
@@ -1,36 +1,10 @@
-.terminal._collapseToggle
-	._box._collapse
+.terminal
+	._items
 		._title 
-			._title-col contat me_
+			._title-col TERMINAL_
 			._close-btn
 				+iconfont("cross-middle")
 		._body 
-			._column
-			.form 
-				form._bod(action="#" id="form") 
-					h3._title Скажи Привет!
-					._item
-						label._label(for="form-name") _Name*: 
-						input._input(id="form-name" name="name" type="text" placeholder="Bill Gates") 
-					._item
-						label._label(for="form-email") _E-mail:*: 
-						input._input(id="form-email" name="email" type="text")
-					._item
-						label._label(for="form-message") _message:*: 
-						textarea._message(id="form-message" name="message" placeholder="Enter your message...")
-			.editor-gutter._column
-				ul 
-					li._nubmber 1 
-					li._nubmber 2
-					li._nubmber.-active 3
-					li._nubmber 4
-					li._nubmber 5
-					li._nubmber 6
-					li._nubmber 7
-					li._nubmber 8
-					li._nubmber 9
-					li._nubmber 10
-					li._nubmber 11
-			._column
-
+			._column.bp-1 
+			._column.bp-2 
 
