--- a/#src/scss/section/section-terminal.scss
+++ b/#src/scss/section/section-terminal.scss
@@ -1,24 +1,58 @@
 .terminal {
-	display: grid;
-	// grid-template-rows: 0fr;
-	// opacity: 0;
-	transition: all 0.5s ease-in-out;
+	display: flex;
+	flex-direction: column-reverse;
+	position: absolute;
+	width: 100%;
+	top: 0;
+	bottom: 0;
+	// border: 5px solid #00f7ff;
+	// min-height: 0%;
+	&._show {
+		min-height: 100%;
+		transition: max-height 0.5s ease-in-out;
+	}
+	&._open {
+		min-height: 100%;
+		z-index: 2;
+		// grid-template-rows: 1fr;
+		.terminal__items {
+			max-height: 100%;
+		}
+	}
+
+	// .terminal__items
+	&__items {
+		flex: 0 1 100%;
+		overflow: hidden;
+		overflow-y: auto;
+		height: auto;
+		max-height: 0;
+		z-index: 3;
+		transition: max-height 0.5s ease-in-out;
+		&::-webkit-scrollbar {
+			width: 3px;
+		}
+	}
+
 	// .terminal__title
 	&__title {
+		position: sticky;
+		top: 0;
+		width: 100%;
 		padding: 0 1.5rem;
-		@include flex-align-center;
 		background: $background-color-title;
 		height: $titleHeight;
 		border-bottom: 1px solid $border-color;
+		@include flex-align-center;
 	}
 
-	// .terminal__menu
+	// .terminal__title-col
 	&__title-col {
 		flex: 0 100%;
 		color: $blue-light;
 	}
 
-	// .terminal__close
+	// .terminal__close-btn
 	&__close-btn {
 		cursor: pointer;
 
@@ -38,50 +72,39 @@
 		}
 	}
 
-	// .terminal__box
-	&__box {
-		min-height: 0;
-	}
-
 	// .terminal__body
 	&__body {
+		background: $background-terminal;
 		display: flex;
 		padding: 0 2rem;
+		height: calc(100% - 3rem);
+		overflow: hidden;
+		overflow-y: auto;
 	}
 
 	// .terminal__column
 	&__column {
+		overflow: hidden;
+		max-height: 100%;
 		&:nth-child(1) {
-			flex: max-content;
+			flex: 0 1 100%;
+			// min-height: 125%;
+			padding-right: 1rem;
+			@include flex-justify-center;
+			.hello-page__column {
+				align-content: center;
+			}
+			.hello-page__row {
+				min-height: 110%;
+			}
 		}
+
 		&:nth-child(2) {
-			background: $background-active-bar;
-			flex: 0 1 auto;
+			background-color: $background-active-bar;
+			flex: 0 1 6rem;
 		}
-		&:nth-child(3) {
-			flex: max-content;
+		.hello-page__column {
+			padding: 0;
 		}
-	}
-
-	&._open {
-		opacity: 1;
-		border-top: 1px solid $blue-light;
-	}
-}
-
-.editor-gutter {
-	padding: 2rem 0;
-
-	// .editor-gutter__nubmber
-	&__nubmber {
-		padding: 0 2rem;
-		text-align: right;
-		width: 5rem;
-		color: $font-comment-collor;
-	}
-
-	// .editor-gutter__nubmber--active
-	&__nubmber--active {
-		color: $selected-color;
 	}
 }
